# Pets-Management-System

./: .gitignore  .gitignore.bak  _build_final.cmd  _build_proposal.cmd  _build_risk.cmd  capstone.cls  readme.md  team.tex
.github/workflows/: build_final.yml  build_proposal.yml  build_risk.yml
Pico/capstone_wifi_test/: CMakeLists.txt  test.c
final-report/: business.tex  full.tex  readme.md  technical.tex
final-report/parts/: appendices.tex  business-case.tex  conclusion.tex  summary.tex  technical-hardware.tex  technical-overview.tex  technical-software.tex
images/: readme.md
project/: readme.md
project/mobile/: README.md  settings.gradle
project/mobile/app/: build.gradle
project/mobile/gradle/wrapper/: gradle-wrapper.properties
project/server/SPCA_backend/: Database.sqlite  Database.sqlite-shm  Database.sqlite-wal  Program.cs  SPCA_backend.csproj  SPCA_backend.sln  appsettings.json  package-lock.json  web.config.txt
project/server/SPCA_backend/Controllers/: ChatController.cs  DogController.cs  SPCAController.cs  UserController.cs  UtilController.cs
project/server/SPCA_backend/Data/: ISPCARepo.cs  SPCARepo.cs  (+1 more)
project/web/: README.md  index.html  package-lock.json  package.json
project/web/src/: App.jsx  constants.js  index.css  main.jsx  theme.js
proposal/: anonymous.tex  business.tex  full.tex  readme.md  technical.tex
proposal/parts/: appendices.tex  business-case.tex  conclusion.tex  feedback.tex  summary.tex  technical-hardware.tex  technical-overview.tex  technical-software.tex
risk-analysis/: analysis.tex  full.tex  readme.md
(+175 files in other folders)
